--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,9 @@
 
 <!-- Custom JS -->
 <script src="{{ url_for('static', filename='js/main.js') }}"></script>
-
+<!-- Esri Leaflet -->
+<script src="https://unpkg.com/esri-leaflet@3.0.10/dist/esri-leaflet.js"></script>
+<script src="https://unpkg.com/esri-leaflet-renderers@3.0.1/dist/esri-leaflet-renderers.js"></script>
 {% block extra_js %}{% endblock %}
 </body>
 </html>
