--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,14 +19,14 @@
     {% block extra_css %}{% endblock %}
 </head>
 <body class="bg-gray-100">
-<!-- Navigation -->
 <nav class="bg-white shadow-lg">
     <div class="max-w-7xl mx-auto px-4">
-        <div class="flex justify-between h-16">
-            <div class="flex">
-                <div class="flex-shrink-0 flex items-center">
-                    <span class="text-xl font-bold text-gray-800">GIS Playground</span>
-                </div>
+        <div class="flex justify-between h-16 items-center">
+            <div class="flex items-center">
+                <span class="text-xl font-bold text-gray-800">GIS Playground</span>
+            </div>
+            <div class="flex items-center">
+                <a href="/upload" class="ml-4 text-sm font-semibold text-gray-800">Upload</a>
             </div>
         </div>
     </div>
@@ -42,7 +42,6 @@
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
 
-<!-- Custom JS -->
 <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 <!-- Esri Leaflet -->
 <script src="https://unpkg.com/esri-leaflet@3.0.10/dist/esri-leaflet.js"></script>
