--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,34 +19,35 @@
     {% block extra_css %}{% endblock %}
 </head>
 <body class="bg-gray-100">
-<nav class="bg-white shadow-lg">
-    <div class="max-w-7xl mx-auto px-4">
-        <div class="flex justify-between h-16 items-center">
-            <div class="flex items-center">
-                <a href="{{ url_for('main.index') }}" class="text-xl font-bold text-gray-800">GIS Playground</a>
-            </div>
-            <div class="flex items-center">
-                <a href="{{ url_for('main.upload_form') }}" class="ml-4 text-sm font-semibold text-gray-800">Upload</a>
+    <nav class="bg-white shadow-lg">
+        <div class="max-w-7xl mx-auto px-4">
+            <div class="flex justify-between h-16 items-center">
+                <div class="flex items-center">
+                    <a href="{{ url_for('main.index') }}" class="text-xl font-bold text-gray-800">GIS Playground</a>
+                </div>
+                <div class="flex items-center">
+                    <a href="{{ url_for('main.upload_form') }}" class="ml-4 text-sm font-semibold text-gray-800">Upload</a>
+                </div>
             </div>
         </div>
-    </div>
-</nav>
+    </nav>
 
-<!-- Main Content -->
-<main class="container mx-auto px-4 py-6">
-    {% block content %}{% endblock %}
-</main>
+    <!-- Main Content -->
+    <main class="container mx-auto px-4 py-6">
+        {% block content %}{% endblock %}
+    </main>
 
-<!-- Leaflet JS -->
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-        crossorigin=""></script>
+    <!-- Third-party Libraries -->
+    <script type="module" src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+            integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+            crossorigin=""></script>
 
-<!-- Esri Leaflet -->
-<script src="https://unpkg.com/esri-leaflet@3.0.10/dist/esri-leaflet.js"></script>
-<script src="https://unpkg.com/esri-leaflet-renderers@3.0.1/dist/esri-leaflet-renderers.js"></script>
-<script src="https://unpkg.com/esri-leaflet-cluster@3.0.0/dist/esri-leaflet-cluster.js"></script>
-<script src="https://unpkg.com/esri-leaflet-vector@4.0.1/dist/esri-leaflet-vector.js"></script>
-{% block extra_js %}{% endblock %}
+    <!-- Esri Leaflet -->
+    <script type="module" src="https://unpkg.com/esri-leaflet@3.0.10/dist/esri-leaflet.js"></script>
+    <script type="module" src="https://unpkg.com/esri-leaflet-renderers@3.0.1/dist/esri-leaflet-renderers.js"></script>
+    <script type="module" src="https://unpkg.com/esri-leaflet-cluster@3.0.0/dist/esri-leaflet-cluster.js"></script>
+    <script type="module" src="https://unpkg.com/esri-leaflet-vector@4.0.1/dist/esri-leaflet-vector.js"></script>
+
+    {% block extra_js %}{% endblock %}
 </body>
 </html>
